force-app/main/default/objects/util_closer_Case_Log__c/util_closer_Case_Log__c.object-meta.xml
<CustomObject>
    <description>Tracks individual Case processing logs for the Case Auto-Closer system. One record per Case evaluated.</description>
    <label>Case Log</label>
    <nameField>
        <displayFormat>CLOG-{00000}</displayFormat>
        <label>Case Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>