force-app/main/default/objects/util_closer_Case_Log__c/fields/Batch_Chunk_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Chunk_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Which batch chunk processed this Case</description>
    <label>Batch Chunk Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>