force-app/main/default/objects/util_closer_Case_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the evaluated Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Auto-Closer Logs</relationshipLabel>
    <relationshipName>Case_Auto_Closer_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>