force-app/main/default/objects/util_closer_Case_Log__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <description>Denormalized Case Number for reporting</description>
    <label>Case Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>