force-app/main/default/objects/util_closer_Case_Log__c/fields/Child_Records_Checked__c.field-meta.xml
<CustomField>
    <fullName>Child_Records_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether child record criteria was evaluated</description>
    <label>Child Records Checked</label>
    <type>Checkbox</type>
</CustomField>