force-app/main/default/objects/util_closer_Case_Log__c/fields/Child_Records_Found__c.field-meta.xml
<CustomField>
    <fullName>Child_Records_Found__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of child records found for this Case</description>
    <label>Child Records Found</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>