force-app/main/default/objects/util_closer_Case_Log__c/fields/Matched_Rule__c.field-meta.xml
<CustomField>
    <fullName>Matched_Rule__c</fullName>
    <description>DeveloperName of the matched rule</description>
    <label>Matched Rule</label>
    <length>100</length>
    <type>Text</type>
</CustomField>