force-app/main/default/objects/util_closer_Case_Log__c/fields/Matched_Rule_Label__c.field-meta.xml
<CustomField>
    <fullName>Matched_Rule_Label__c</fullName>
    <description>MasterLabel of the matched rule</description>
    <label>Matched Rule Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>