force-app/main/default/objects/util_closer_Case_Log__c/fields/Original_Status__c.field-meta.xml
<CustomField>
    <fullName>Original_Status__c</fullName>
    <description>Case status before processing</description>
    <label>Original Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>