force-app/main/default/objects/util_closer_Case_Log__c/fields/Processing_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time_Ms__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Processing time in milliseconds</description>
    <label>Processing Time (ms)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>