force-app/main/default/objects/util_closer_Case_Log__c/fields/Rules_Evaluated_Count__c.field-meta.xml
<CustomField>
    <fullName>Rules_Evaluated_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of rules evaluated for this Case</description>
    <label>Rules Evaluated Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>