force-app/main/default/objects/util_closer_Case_Log__c/fields/Target_Reason__c.field-meta.xml
<CustomField>
    <fullName>Target_Reason__c</fullName>
    <description>Reason value from the matched rule</description>
    <label>Target Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>