force-app/main/default/objects/util_closer_Case_Log__c/fields/Target_Status__c.field-meta.xml
<CustomField>
    <fullName>Target_Status__c</fullName>
    <description>Target status from the matched rule</description>
    <label>Target Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>