force-app/main/default/objects/util_closer_Case_Log__c/listViews/All_Case_Logs.listView-meta.xml
<ListView>
    <fullName>All_Case_Logs</fullName>
    <columns>NAME</columns>
    <columns>Batch_Log__c</columns>
    <columns>Case__c</columns>
    <columns>Case_Number__c</columns>
    <columns>Processing_Result__c</columns>
    <columns>Original_Status__c</columns>
    <columns>Target_Status__c</columns>
    <columns>Matched_Rule__c</columns>
    <columns>Processing_Time_Ms__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Case Logs</label>
    <language>en_US</language>
</ListView>