force-app/main/default/objects/util_closer_Case_Log__c/listViews/Failed_Case_Updates.listView-meta.xml
<ListView>
    <fullName>Failed_Case_Updates</fullName>
    <columns>NAME</columns>
    <columns>Batch_Log__c</columns>
    <columns>Case__c</columns>
    <columns>Case_Number__c</columns>
    <columns>Original_Status__c</columns>
    <columns>Target_Status__c</columns>
    <columns>Matched_Rule__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processing_Result__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed Case Updates</label>
    <language>en_US</language>
</ListView>