force-app/main/default/objects/util_closer_Case_Log__c/listViews/Not_Matched_Cases.listView-meta.xml
<ListView>
    <fullName>Not_Matched_Cases</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Number__c</columns>
    <columns>Original_Status__c</columns>
    <columns>Rules_Evaluated_Count__c</columns>
    <columns>Child_Records_Checked__c</columns>
    <columns>Child_Records_Found__c</columns>
    <columns>Batch_Chunk_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processing_Result__c</field>
        <operation>equals</operation>
        <value>Not Matched</value>
    </filters>
    <label>Not Matched Cases</label>
    <language>en_US</language>
</ListView>